--- a/css/style.css
+++ b/css/style.css
@@ -613,11 +613,11 @@ background-color: #212121;
 }
 
 .img-abt-info1 {
-    background: url(../images/bb1.jpg)no-repeat center;
+    background: url(../images/bbb1.jpg)no-repeat center;
 }
 
 .img-abt-info2 {
-    background: url(../images/bb2.jpg)no-repeat center;
+    background: url(../images/bbb2.jpg)no-repeat center;
 }
 
 .img-abt-info2,
@@ -668,19 +668,19 @@ background-color: #212121;
 /*-- service-- */
 
 .color-img-one {
-    background: url(../images/s5.jpg)no-repeat center;
+    background: url(../images/s5b.jpg)no-repeat center;
 }
 
 .color-img-two {
-    background: url(../images/s4.jpg)no-repeat center;
+    background: url(../images/s4b.jpg)no-repeat center;
 }
 
 .color-img-three {
-    background: url(../images/s3.jpg)no-repeat center;
+    background: url(../images/s3b.jpg)no-repeat center;
 }
 
 .color-img-four {
-    background: url(../images/s2.jpg)no-repeat center;
+    background: url(../images/s2b.jpg)no-repeat center;
 }
 
 .color-img-four,
@@ -860,7 +860,10 @@ background-color: #212121;
     background: url(../images/erfi4.jpg)no-repeat 0px 0px;
 }
 .busness-tip-two,
-.busness-tip-one {
+.busness-tip-one,
+.busness-tip-three,
+.busness-tip-four
+{
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -890,12 +893,27 @@ background-color: #212121;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
-
+#messageContainer {
+    display: none; /* Masquer la section par défaut */
+}
 .contact-forms input,
-.contact-forms textarea {
+.contact-forms textarea{
     font-size: 14px;
     color: #000;
     padding: .9em .7em;
+    background: #f3f3f3;
+    outline: none;
+    border: none;
+    border-left: 2px solid #EFD912;
+    border-radius: 0px;
+    outline: none !important;
+    box-shadow: 0px 0px 3px #bdbcbc;
+}
+
+.contact-forms select{
+    font-size: 14px;
+    color: #000;
+    padding: .5em .7em;
     background: #f3f3f3;
     outline: none;
     border: none;
@@ -929,7 +947,18 @@ background-color: #212121;
     /* Firefox 18- */
     color: #000;
 }
+.message-container {
+    background-color: #EFD912;
+    color: #333;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
+.message-container p {
+    margin: 0;
+}
 button.sent-butnn {
     width: 100%;
     color: #fff;
