--- a/css/style.css
+++ b/css/style.css
@@ -125,13 +125,19 @@ ul li {
 .stat-info h4,
 .contact-address-grid h4,
 .ser-sevice-grid h4,
-.text-grid-gried h4 {
+.text-grid-gried h4,
+.carousel-caption h4{
     font-size: 22px;
     color: #000000;
     text-transform: capitalize;
     font-weight: 600;
 }
-
+.carousel-caption p{
+    font-size: 12px;
+    color: #000000;
+    text-transform: capitalize;
+    font-weight: 500;
+}
 .w3layouts-abt-info p,
 .about-para-txt p,
 .mid-text-info p,
@@ -731,11 +737,27 @@ background-color: #212121;
 /*--//service-- */
 
 /*-- gallery-- */
-
 .gallery {
     background: #f5f5f5;
 }
+#imageCarousel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+#imageCarousel .carousel-inner {
+    text-align: center;
+}
+/* Flèche de défilement à gauche */
+.carousel-control-prev-icon {
+    background-color: #EFD912;
+}
+
+/* Flèche de défilement à droite */
+.carousel-control-next-icon {
+    background-color: #EFD912;
+}
 /* popup */
 
 .popup-effect {
@@ -797,7 +819,8 @@ background-color: #212121;
     -ms-background-size: cover;
 }
 
-.text-grid-gried {
+.text-grid-gried,
+.carousel-caption{
     background: #fbfbfb;
     padding: 16px 15px;
 }
